feat(java-agent): read the Swing/AWT tree from inside the JVM
The agent could reach a JVM but not describe its UI. This adds the
Swing/AWT adapter: the instance tree as the spine, the accessible view
as enrichment, and virtual children grafted where components end.

Reading from inside is what closes the Access Bridge's fidelity gap. The
JDK aliases every JTable cell to one shared renderer, so through JAB a
cell has a volatile name, no bounds and no stable identity. Here the
cell's value comes from the model and its rectangle from getCellRect —
measured against the fixture, every cell carries its own name, its own
bounds and its own selection state.

Virtual children get interned per (owner, position) rather than
registering the JDK's wrapper, which is a fresh object on every lookup:
registering that would hand the same cell a new id per read, the exact
opposite of the identity-stable ids this exists to provide.

Notable details:

- `Component.getName()` travels only when `nameExplicitlySet` says the
  application set it. AWT *manufactures* one for every unnamed Frame
  ("frame0"), so reporting it blindly renames every Swing window.
- Coordinates convert via GraphicsConfiguration to the physical-pixel
  wire contract. The naive per-monitor translate cancels; see
  SwingGeometry for why one multiplication is the whole conversion.
- The native window handle comes from the AWT peer. On Java 9+ that
  needs java.awt *and* sun.awt.windows opened, and the command-line
  remedy is unavailable to a design built on attaching to a JVM somebody
  else launched — so the agent opens them itself via
  Instrumentation.redefineModule, which is what JEP 261 gave agents that
  power for. Measured: no --add-opens needed on any JDK.
- No text write and no highlight. Text is typed (`text-input-policy`);
  drawing is the platform's job, and what JAB lacks for a cell is
  *bounds*, not a way to draw.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>